fix test after change to border-collapse: collapse

--- a/src/3rdparty/walkontable/css/walkontable.css
+++ b/src/3rdparty/walkontable/css/walkontable.css
@@ -12,7 +12,7 @@
 }
 
 .wtHolder table {
-  border-collapse: separate;
+  border-collapse: collapse;
   position: relative;
   -webkit-user-select: none;
   -khtml-user-select: none;
